# cococa-clip

./: Cargo.toml
docs/: settings-ui-redesign.md
scripts/: build_dmg.sh
src/: app.rs  autostart.rs  history.rs  hotkey.rs  icons.rs  main.rs  panel.rs  paste.rs  tray.rs
src/ui/: controller.rs  controller_events.rs  controller_state.rs  history_list.rs  layout.rs  layout_main.rs  layout_settings.rs  mod.rs  widgets.rs
