[package]
name = "cococa-clip"
version = "0.1.0"
edition = "2024"

[dependencies]
cocoa = "0.26.1"
objc = "0.2"
arboard = "3"
core-graphics = "0.24"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
tray-icon = { version = "0.21.3", default-features = false }
global-hotkey = "0.7.0"
resvg = { version = "0.45.1", default-features = false }
png = "0.17"
rusqlite = { version = "0.39.0", features = ["bundled"] }
