[package]
name = "cococa-clip"
version = "0.1.0"
edition = "2024"

[dependencies]
cocoa = "0.26.1"
objc = "0.2"
arboard = "3"
core-graphics = "0.24"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
tray-icon = { version = "0.21.3", default-features = false }
global-hotkey = "0.7.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
block = "0.1.6"

[package.metadata.bundle]
name = "Cococa Clip"
identifier = "com.cococa.clip"
short_description = "Clipboard history tool for macOS"
category = "public.app-category.productivity"
copyright = "Copyright (c) 2026 Cococa"
